*Empty MediaWiki Message*

--- a/Moskv-Siti.mw
+++ b/Moskv-Siti.mw
@@ -11,7 +11,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 |bgcolor="bbffbb" width="90px" | Tehtud (saudud)
 |bgcolor="ddffdd" width="90px" | Projektan korktuz
 |bgcolor="ffffbb" width="90px" | Saudese
-|bgcolor="ffbbbb" width="90px" | „Kül'menzoittud“
+|bgcolor="ffbbbb" width="90px" | «Kül'menzoittud»
 |bgcolor="C8C8C8" width="90px" | Tühjitud
 |bgcolor="EEEEEE" width="90px" | Ezimeletaden
 |}
@@ -60,7 +60,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:left;"   | Toine kompleksan pala om projektiruidud
 |- bgcolor="ffffbb"
 | style="text-align:center;" | 6—8
-| style="text-align:center;" | [[Mosv-Sitin südäin]]
+| style="text-align:center;" | [[Moskv-Sitin südäin]]
 | style="text-align:right;"  | 2005
 | style="text-align:right;"  | 2014
 | style="text-align:right;"  | 1
@@ -68,7 +68,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:left;"   | 
 |- bgcolor="bbffbb"
 | style="text-align:center;" | 9
-| style="text-align:center;" | [[Pälidnoiden Lidn]]
+| style="text-align:center;" | [[Pälidnoiden Ma]]
 | style="text-align:right;"  | 2005
 | style="text-align:right;"  | 2009
 | style="text-align:right;"  | 3
@@ -140,7 +140,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:left;"   | Mäneb vaumičend sauvomižele
 |- align="right" bgcolor="bbffbb"
 | style="text-align:center;" | 19
-| style="text-align:center;" | [[Pohjoine čurunduz]]
+| style="text-align:center;" | [[Pohjoine čuhunduz]]
 | style="text-align:right;"  | 2005
 | style="text-align:right;"  | 2007
 | style="text-align:right;"  | 1
@@ -226,7 +226,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 ! Homaičendad
 |- bgcolor="bbffbb"
 | style="text-align:center;" | 0
-| style="text-align:center;" | Čurunduz 2000
+| style="text-align:center;" | Čuhunduz 2000
 | style="text-align:right;"  | 1996
 | style="text-align:right;"  | 2001
 | style="text-align:right;"  | 104
@@ -266,7 +266,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:left;"   | Sauvomižen augotiž linneb sügüzel
 |- bgcolor="bbffbb"
 | style="text-align:center;" | 9
-| style="text-align:center;" | Город Столиц: Офисная пристройка
+| style="text-align:center;" | Pälidnoiden Ma: Ofisoiden ližasauvuz
 | style="text-align:right;"  | 2005
 | style="text-align:right;"  | 2008
 | style="text-align:right;"  | 70
@@ -276,7 +276,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:left;"   |
 |- bgcolor="bbffbb"
 | style="text-align:center;" | 9
-| style="text-align:center;" | Город Столиц: Санкт-Петербург
+| style="text-align:center;" | Pälidnoiden Ma: Piter
 | style="text-align:right;"  | 2005
 | style="text-align:right;"  | 2009
 | style="text-align:right;"  | 255
@@ -286,7 +286,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:left;"   |
 |- bgcolor="bbffbb"
 | style="text-align:center;" | 9
-| style="text-align:center;" | Город Столиц: Москва
+| style="text-align:center;" | Pälidnoiden Ma: Moskv
 | style="text-align:right;"  | 2005
 | style="text-align:right;"  | 2009
 | style="text-align:right;"  | 302
@@ -296,7 +296,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:left;"   |
 |- bgcolor="bbffbb"
 | style="text-align:center;" | 10
-| style="text-align:center;" | Башня на Набережной: A
+| style="text-align:center;" | Čuhunduz Randirdal: A
 | style="text-align:right;"  | 2003
 | style="text-align:right;"  | 2004
 | style="text-align:right;"  | 80
@@ -306,7 +306,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:left;"   |
 |- bgcolor="bbffbb"
 | style="text-align:center;" | 10
-| style="text-align:center;" | Башня на Набережной: B
+| style="text-align:center;" | Čuhunduz Randirdal: B
 | style="text-align:right;"  | 2004
 | style="text-align:right;"  | 2005
 | style="text-align:right;"  | 127
@@ -316,7 +316,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:left;"   |
 |- bgcolor="bbffbb"
 | style="text-align:center;" | 10
-| style="text-align:center;" | Башня на Набережной: C
+| style="text-align:center;" | Čuhunduz Randirdal: C
 | style="text-align:right;"  | 2005
 | style="text-align:right;"  | 2007
 | style="text-align:right;"  | 268
@@ -326,47 +326,47 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:left;"   |
 |- bgcolor="ffffbb"
 | style="text-align:center;" | 11
-| style="text-align:center;" | IQ-quarter: Башня 1
+| style="text-align:center;" | IQ-quarter: Čuhunduz 1
 | style="text-align:right;"  | 2012
 | style="text-align:right;"  | 2015
 | style="text-align:right;"  | 80
 | style="text-align:right;"  | 80
 | style="text-align:right;"  | 21
 | style="text-align:right;"  |
-| style="text-align:left;"   | Строятся подземные этажи (на 4 июня 2013)
+| style="text-align:left;"   | Manaluižed žirud oma sauvomižes (2013 kezaku 4. päivän)
 |- bgcolor="ffffbb"
 | style="text-align:center;" | 11
-| style="text-align:center;" | IQ-quarter: Башня 2
+| style="text-align:center;" | IQ-quarter: Čuhunduz 2
 | style="text-align:right;"  | 2012
 | style="text-align:right;"  | 2015
 | style="text-align:right;"  | 135
 | style="text-align:right;"  | 135
 | style="text-align:right;"  | 33
 | style="text-align:right;"  |
-| style="text-align:left;"   | Строится 11-й этаж (на 4 июня 2013)
+| style="text-align:left;"   | 11-nz' žir om sauvomižes (2013 kezaku 4. päivän)
 |- bgcolor="ffffbb"
 | style="text-align:center;" | 11
-| style="text-align:center;" | IQ-quarter: Башня 3
+| style="text-align:center;" | IQ-quarter: Čuhunduz 3
 | style="text-align:right;"  | 2012
 | style="text-align:right;"  | 2015
 | style="text-align:right;"  | 169
 | style="text-align:right;"  | 169
 | style="text-align:right;"  | 42
 | style="text-align:right;"  |
-| style="text-align:left;"   | Строится 9-й этаж (на 4 июня 2013)
+| style="text-align:left;"   | 9-nz' žir om sauvomižes (2013 kezaku 4. päivän)
 |- bgcolor="ddffdd"
 | style="text-align:center;" | 12
-| style="text-align:center;" | Евразия
+| style="text-align:center;" | Evrazii
 | style="text-align:right;"  | 2007
 | style="text-align:right;"  | 2013
 | style="text-align:right;"  | 309
 | style="text-align:right;"  | 309
 | style="text-align:right;"  | 72
 | style="text-align:right;"  |
-| style="text-align:left;"   | Идёт остекление последних этажей башни (на 9 июня 2013)
+| style="text-align:left;"   | Čuhundusen jäl'gmäižiden žiruiden stökliden krepimine mäneb (2013 kezaku 9. päivän)
 |- bgcolor="bbffbb"
 | style="text-align:center;" | 13
-| style="text-align:center;" | Федерация: Запад
+| style="text-align:center;" | Federacii: Päivlaskm
 | style="text-align:right;"  | 2003
 | style="text-align:right;"  | 2008
 | style="text-align:right;"  | 242
@@ -376,27 +376,27 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:left;"   |
 |- bgcolor="ffbbbb"
 | style="text-align:center;" | 13
-| style="text-align:center;" | Федерация: Восток
+| style="text-align:center;" | Federacii: Päivnouzm
 | style="text-align:right;"  | 2004
 | style="text-align:right;"  | 2014
 | style="text-align:right;"  | 360
 | style="text-align:right;"  | 360
 | style="text-align:right;"  | 93
 | style="text-align:right;"  |
-| style="text-align:left;"   | Строительство приостановлено (на 9 июня 2013)<ref>{{cite web|url=http://www.skyscrapercity.com/showthread.php?t=457285&page=589postcount=11158|title=SkyscraperCity - View Single Post - 13: Комплекс Федерация &#124; 242м 6 …|accessdate=2013-06-04|archiveurl=http://www.webcitation.org/6F95L0TdH|archivedate=2013-06-04}}</ref>
+| style="text-align:left;"   | Sauvomine om jättud jäl'gilepäi (2013 kezaku 9. päivän)<ref>[http://www.skyscrapercity.com/showthread.php?t=457285&page=589postcount=11158 SkyscraperCity - View Single Post - 13: Комплекс Федерация]</ref>
 |- bgcolor="ffbbbb"
 | style="text-align:center;" | 13
-| style="text-align:center;" | Федерация: Шпиль
+| style="text-align:center;" | Federacii: Špil'
 | style="text-align:right;"  | 2004
 | style="text-align:right;"  | 2014
 | style="text-align:right;"  | 509
 | style="text-align:right;"  | 509
 | style="text-align:right;"  |
 | style="text-align:right;"  |
-| style="text-align:left;"   | Проект заморожен (на 9 июня 2013)
+| style="text-align:left;"   | Projekt om «kül'menzoittud» (2013 kezaku 9. päivän)
 |- bgcolor="bbffbb"
 | style="text-align:center;" | 14
-| style="text-align:center;" | Меркурий Сити Тауэр
+| style="text-align:center;" | Merkurii Citi Tower
 | style="text-align:right;"  | 2009
 | style="text-align:right;"  | 2013
 | style="text-align:right;"  | 339
@@ -406,37 +406,37 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:left;"   |
 |- bgcolor="ffffbb"
 | style="text-align:center;" | 16
-| style="text-align:center;" | ОКО: Южная башня
+| style="text-align:center;" | OKO: Suvičuhunduz
 | style="text-align:right;"  | 2011
 | style="text-align:right;"  | 2014
 | style="text-align:right;"  | 335
 | style="text-align:right;"  | 335
 | style="text-align:right;"  | 85
 | style="text-align:right;"  |
-| style="text-align:left;"   | Строится 44-й этаж (на 9 июня 2013)
+| style="text-align:left;"   | 44-nz' žir om sauvomižes (2013 kezaku 9. päivän)
 |- bgcolor="ffffbb"
 | style="text-align:center;" | 16
-| style="text-align:center;" | ОКО: Северная башня
+| style="text-align:center;" | OKO: Pohjoižčuhunduz
 | style="text-align:right;"  | 2011
 | style="text-align:right;"  | 2014
 | style="text-align:right;"  | 195
 | style="text-align:right;"  | 195
 | style="text-align:right;"  | 44
 | style="text-align:right;"  |
-| style="text-align:left;"   | Строится 37-й этаж (на 9 июня 2013)
+| style="text-align:left;"   | 37-nz' žir om sauvomižes (2013 kezaku 9. päivän)
 |- bgcolor="ffffbb"
 | style="text-align:center;" | 16
-| style="text-align:center;" | ОКО: Паркинг
+| style="text-align:center;" | OKO: Parking
 | style="text-align:right;"  | 2012
 | style="text-align:right;"  | 2013
 | style="text-align:right;"  | 30
 | style="text-align:right;"  | 30
 | style="text-align:right;"  | 9
 | style="text-align:right;"  |
-| style="text-align:left;"   | Строятся подземные этажи (на 9 июня 2013)
+| style="text-align:left;"   | Manaluižed žirud oma sauvomižes (2013 kezaku 9. päivän)
 |- bgcolor="bbffbb"
 | style="text-align:center;" | 19
-| style="text-align:center;" | Северная башня
+| style="text-align:center;" | Pohjoižčuhunduz
 | style="text-align:right;"  | 2005
 | style="text-align:right;"  | 2007
 | style="text-align:right;"  | 105
@@ -457,33 +457,37 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 ! Homaičendad
 |- bgcolor="C8C8C8"
 | style="text-align:center;" | 4
-| style="text-align:center;" | Аква-Сити Палас<ref>[http://www.world-art.ru/architecture/architecture.php?id=6720 Аква Сити Палас [Aqua City Palace&#93;<!-- Заголовок добавлен ботом -->]</ref>
+| style="text-align:center;" | Akva-Siti Palas<ref>[http://www.world-art.ru/architecture/architecture.php?id=6720 Akva-Siti Palas [Aqua City Palace&#93;]</ref>
 | style="text-align:left;"   |
 | style="text-align:left;"   | 36
 | style="text-align:left;"   |
-| style="text-align:left;"   | Заменён на комплекс «[[Imperia Tower]]»
+| style="text-align:left;"   | Vajehtadud «[[Imperia Tower]]»-kompleksha
 |- bgcolor="C8C8C8"
 | style="text-align:center;" | 15
-| style="text-align:center;" | Государственная Дума
+| style="text-align:center;" | Valdkundaline Dum
 | style="text-align:left;"   | 308
 | style="text-align:left;"   | 72
 | style="text-align:left;"   | 622 000
-| style="text-align:left;"   | Заменён на комплекс «Гранд Сити Москва»
+| style="text-align:left;"   | Vajehtadud «Grand City Moskv»-kompleksha
 |- bgcolor="C8C8C8"
 | style="text-align:center;" | 17-18
-| style="text-align:center;" | [[Башня Россия]]
+| style="text-align:center;" | [[Venäma-čuhunduz]]
 | style="text-align:left;"   | 612
 | style="text-align:left;"   | 118
 | style="text-align:left;"   | 520 000
-| style="text-align:left;"   | Отменено
+| style="text-align:left;"   | Oli tühjitadud
 |- bgcolor="C8C8C8"
 | style="text-align:center;" | 20
-| style="text-align:center;" | [[Выставочно-деловой комплекс (Москва-Сити)|Выставочно-деловой комплекс]]
+| style="text-align:center;" | [[Ozutelemiž-azjaline kompleks (Moskv-Siti)|Ozutelemiž-azjaline kompleks]]
 | style="text-align:left;"   | 228
 | style="text-align:left;"   | 59
 | style="text-align:left;"   | 180 000
-|style="text-align:left;"    | Отменено
+|style="text-align:left;"    | Oli tühjitadud
 |}
+
+== Homaičendad ==
+{{Reflist}}
+
 {{stub}}
 
 [[Kategorii:Moskv]]
