*Empty MediaWiki Message*

--- a/Moskv-Siti.mw
+++ b/Moskv-Siti.mw
@@ -383,7 +383,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:right;"  | 360
 | style="text-align:right;"  | 93
 | style="text-align:right;"  |
-| style="text-align:left;"   | Sauvomine om jättud jäl'gilepäi (2013 kezaku 9. päivän)<ref>[http://www.skyscrapercity.com/showthread.php?t=457285&page=589postcount=11158 SkyscraperCity - View Single Post - 13: Комплекс Федерация]</ref>
+| style="text-align:left;"   | Sauvomine om jättud jäl'gilepäi (2013 kezaku 9. päivän)<ref>[http://www.skyscrapercity.com/showthread.php?t=457285&page=589postcount=11158 SkyscraperCity - View Single Post - 13: Federacii-kompleks]</ref>
 |- bgcolor="ffbbbb"
 | style="text-align:center;" | 13
 | style="text-align:center;" | Federacii: Špil'
