--- a/Moskv.mw
+++ b/Moskv.mw
@@ -22,14 +22,14 @@ Moskv om Venäman znamasine turistine keskuz. [[Moskvan kreml']] da [[Rusked tor
 
 == Galerei ==
 <gallery> 
-Fail:St Basils Cathedral-500px.jpg|Pühän Vasilijan päjumalanpert'
-Fail:Moscow Bolshoi Theatre 2011.JPG|[[Bol’šoi Teatr]]
-Fail:Russia-Moscow-Cathedral of Christ the Saviour-3.jpg|Hristosan Päzutajan pühäpert'
-Fail:0 4707b 6549aa91 spasskaya.jpg|Spasskaja-čuhunduz
-Fail:MIBC 27th April 2012.jpg|[[Moskv-siti]]
+Fail:St Basils Cathedral-500px.jpg|[[Pühän Vasilijan päjumalanpert']]
+Fail:Moscow Bolshoi Theatre 2011.JPG|[[Bol'šoi Teatr]]
+Fail:Russia-Moscow-Cathedral of Christ the Saviour-3.jpg|[[Hristos-Sündun päjumalanpert']]
+Fail:0 4707b 6549aa91 spasskaya.jpg|[[Spasskaja-čuhunduz]]
+Fail:MIBC 27th April 2012.jpg|[[Moskv-Siti]]
 </gallery>
 
-[[Fail:Moscow pano.jpg|center|850px|pisi|Moskvanjogen Nägu]]
+[[Fail:Moscow pano.jpg|center|850px|pisi|Moskvanjogen nägu]]
 
 == Homaičendad ==
 <references />
