--- a/Leo_Klaudio.mw
+++ b/Leo_Klaudio.mw
@@ -1,4 +1,4 @@
-'''Klaudio Leo''' ([[italijan kel'|ital.]]: ''Claudio Leo''; sünd. [[1973]], [[Milan]], [[Italii]] — kol. [[17. viluku]] [[2013]], sigä-žo) oli italijalaine gitarist [[Cayne]]-gruppas, [[Lacuna Coil]]:an eksühtnii.
+'''Klaudio Leo''' ([[italijan kel'|ital.]]: ''Claudio Leo''; sünd. [[1972]] vai [[1973]], [[Milan]], [[Italii]] — kol. [[17. viluku]] [[2013]], sigä-žo) oli italijalaine gitarist [[Cayne]]-gruppas, [[Lacuna Coil]]:an eksühtnii.
 {{stub}}
 {{Lacuna Coil}}
 
