*Empty MediaWiki Message*

--- a/Minelli_Stiv.mw
+++ b/Minelli_Stiv.mw
@@ -1,4 +1,4 @@
-'''Stiv Minelli''' ([[italijan kel'|ital.]]: ''Steve Minelli'') om italijalaine gitarist «Node»-gruppas.
+'''Stiv Minelli''' ([[italijan kel'|ital.]]: ''Steve Minelli'') om italijalaine gitarist «[[Node]]»-gruppas.
 
 Hän om tetab kut [[Lacuna Coil]]:an koncertühtnii (1997—1998 voziš). Mugažo hän ühtnei gruppiden riven al'bomoiden änetamižes.
 {{stub}}
