--- a/El'_Kahas.mw
+++ b/El'_Kahas.mw
@@ -5,5 +5,6 @@ Pind om 288 km<sup>2</sup> (läz 28,800 [[gektar|ga]]).
 {{stub}}
 
 [[Kategorii:Puištod]]
+[[Kategorii:Londusenkaičend]]
 
 [[de:Nationalpark Cajas]]
