--- a/K'jarelli_Alis.mw
+++ b/K'jarelli_Alis.mw
@@ -1,6 +1,6 @@
 '''Alis Elizabet Rouz K'jarelli''' ([[italijan kel'|ital.]]: ''Alice Jelizabeth Rose Chiarelli'') om italijalaine pianist «Alice in Darkland»-gruppas.
 
-Hän om tetab kut [[Lacuna Coil]]:an koncertühtnii (1998. vodes). Mugažo hän ühtnei gruppiden riven al'bomoiden änetamižes.
+Hän om tetab kut [[Lacuna Coil]]:an koncertühtnii (1998. vodes). Mugažo hän ühtni gruppiden riven al'bomoiden änetamižes.
 {{stub}}
 {{Lacuna Coil}}
 
