*Empty MediaWiki Message*

--- a/Minelli_Stiv.mw
+++ b/Minelli_Stiv.mw
@@ -1,6 +1,6 @@
 '''Stiv Minelli''' ([[italijan kel'|ital.]]: ''Steve Minelli'') om italijalaine gitarist «[[Node]]»-gruppas.
 
-Hän om tetab kut [[Lacuna Coil]]:an koncertühtnii (1997—1998 voziš). Mugažo hän ühtnei gruppiden riven al'bomoiden änetamižes.
+Hän om tetab kut [[Lacuna Coil]]:an koncertühtnii (1997—1998 voziš). Mugažo hän ühtni gruppiden riven al'bomoiden änetamižes.
 {{stub}}
 {{Lacuna Coil}}
 
