*Empty MediaWiki Message*

--- a/Tüterbah.mw
+++ b/Tüterbah.mw
@@ -1,5 +1,5 @@
 [[Fail:Bielefeld-tueterbach01.jpg|thumb|right|250px|Tüterbah]]
-'''Tüterbah''' ([[saksan kel'|saks.]]: ''Tüterbach'') om jogi [[Saksanma]]s, [[Pohjoine Rein—Vestfalii]]-federacijanmas. Om [[Trüggel'bah]]-jogen päližajogi, pidab [[Ems]]-jogen basseinha. Jokseb [[Biledel'd]]-kommunan territorijadme.
+'''Tüterbah''' ([[saksan kel'|saks.]]: ''Tüterbach'') om jogi [[Saksanma]]s, [[Pohjoine Rein—Vestfalii]]-federacijanmas. Om [[Trüggel'bah]]-jogen päližajogi, [[Ems]]-jogen basseinan pala. Jokseb [[Biledel'd]]-kommunan territorijadme.
 
 Piduz om läz 3 kilometrad.
 {{stub}}
