sugu - род, erik - вид

--- a/Pterolepis_glomerata.mw
+++ b/Pterolepis_glomerata.mw
@@ -1,5 +1,5 @@
 [[Fail:Pterolepis glomerata 2.jpg|thumb|right|250px|''Pterolepis glomerata'']]
-'''''Pterolepis glomerata''''' om [[kazmused|kazmuzsugu]] ''[[Melastomataceae]]''-sugukundas.
+'''''Pterolepis glomerata''''' om [[kazmused|kazmuzerik]] ''[[Melastomataceae]]''-sugukundas.
 
 Kazvab [[Suviamerik]]as i [[Pened Antil'jan Sared|Peniš Antil'jan Sariš]], nepsoiš nituiš da saduiš.
 {{stub}}
