*Empty MediaWiki Message*

--- a/Eupithecia_turpis.mw
+++ b/Eupithecia_turpis.mw
@@ -1,4 +1,4 @@
-'''''Eupithecia turpis''''' om [[lipkaižed|lipkaižiden]] ([[kojeg]]iden) sugu ''[[Geometridae]]''-sugukundas.
+'''''Eupithecia turpis''''' om [[lipkaižed|lipkaižiden]] ([[kojeg]]iden) erik ''[[Geometridae]]''-sugukundas.
 
 [[Kitai|Kitajan]] ([[Jun'nan']]-provincijan) [[endemik]].
 {{stub}}
