*Empty MediaWiki Message*

--- a/Asymbolus_galacticus.mw
+++ b/Asymbolus_galacticus.mw
@@ -1,4 +1,4 @@
-'''''Asymbolus galacticus''''' om [[kažiakul|kažiakuloiden]] erik ''[[Asymbolus]]''-sugus. Ümbrikirjutud [[2008]]-žes vodes.
+'''''Asymbolus galacticus''''' om [[kažiakulad|kažiakuloiden]] erik ''[[Asymbolus]]''-sugus. Ümbrikirjutud [[2008]]-žes vodes.
 
 Eläb [[Avstralii (kontinent)|Avstralijan]] randoidenno.
 {{stub}}
