--- a/Lönnrot_Elias.mw
+++ b/Lönnrot_Elias.mw
@@ -1,7 +1,7 @@
 [[Fail:Elias_Lönnrot_portrait.jpg|pisi|250px|E. Lönnrot]]
-'''Elias Lönnrot''' — sur’ [[Suomi|suomalaine]] tedomez’, lekar’, kaikjal tutaban «[[Kalevala|Kalevala]]n» sädai. Elias Lönnrot oli sündnu vodel 1802 sulakun 9 päiväl goll'ha küläomblijan kanzha Sammatihe (Nülandan agj) i eli mairhes. Lönnrot lopi ezmäi ročilaižen školan Tammisaares da [[Turku|Turku]]s, sid' universitetad Turkus (vodel 1827) da [[Hel'sinki|Hel'sinki]]š (vodel 1832). Vodel 1833 hän zavodi rata lekarin Kajaniš. Sigä hän eli 21 vot, vodhesai 1853. Niil vozil Lönnrot äjan ajeli [[Suomi|Suomenmadme]], [[Karjalan Tazovaldkund|Karjal]]adme, Saamenmadme (M. Kastrenanke). 
+'''Elias Lönnrot''' (lugedaus: ''lönn-ruut'') — sur’ [[Suomi|suomalaine]] tedomez’, lekar’, kaikjal tutaban «[[Kalevala|Kalevala]]n» sädai. Elias Lönnrot oli sündnu vodel 1802 sulakun 9 päiväl goll'ha küläomblijan kanzha Sammattihe (Udenman agj) i eli mairhes. Lönnrot lopi ezmäi ročilaižen školan Tammisaares da [[Turku|Turku]]s, sid' universitetad Turkus (vodel 1827) da [[Hel'sinki|Hel'sinki]]š (vodel 1832). Vodel 1833 hän zavodi rata lekarin Kajaaniš. Sigä hän eli 21 vot, vodhesai 1853. Niil vozil Lönnrot äjan ajeli [[Suomi|Suomenmadme]], [[Karjalan Tazovaldkund|Karjal]]adme, Saamenmadme (M. Kastrenanke). 
 
-[[Kajaani|Kajaaniš]] hän kirjuti «Kalevalan» (ezmäine versii — 1835, toine, täuz' — 1849), ročilaiž-suomalaižen vajehnikan i toižed kirjad: «Suomen rahvahan muštatesed» (1842), «Suomen ozoitesed» (1844), «Suomen maižandan kodilekar'» (1839) da «Suomenman kazvišt» (1860). Vodelpäi 1853 — suomen kelen da literaturan professor [[Hel'sinki|Hel’sinki]]n universitetas. Vodelpäi 1862 surmhasai eli Sammati-kodiküläs. Vodelpäi 1876 — Venäman Imperatorižen Tedoakademijan arvostuzakademik. Lönnrotan doktordissertacii «Pohjoižčudin keles» («Om det Nord-tshudiska språket», 1853) om kirjutadud [[Vepsän kel'|vepsän kelen]] polhe.
+[[Kajaani|Kajaaniš]] hän kirjuti «Kalevalan» (ezmäine versii — 1835, toine, täuz' — 1849), ročilaiž-suomalaižen vajehnikan i toižed kirjad: «Suomen rahvahan muštatesed» (1842), «Suomen ozoitesed» (1844), «Suomen maižandan kodilekar'» (1839) da «Suomenman kazvišt» (1860). Vodelpäi 1853 — suomen kelen da literaturan professor [[Hel'sinki|Hel’sinki]]n universitetas. Vodelpäi 1862 surmhasai eli Sammatti-kodiküläs. Vodelpäi 1876 — Venäman Imperatorižen Tedoakademijan arvostuzakademik. Lönnrotan doktordissertacii «Pohjoižčudin keles» («Om det Nord-tshudiska språket», 1853) om kirjutadud [[Vepsän kel'|vepsän kelen]] polhe.
 
 == Irdkosketused ==
 * [http://www.kalevala.ru/ Kalevalan polhe sait] (venäkelel)
