*Empty MediaWiki Message*

--- a/Vaugedjärv.mw
+++ b/Vaugedjärv.mw
@@ -1,9 +1,7 @@
 [[Fail:Белое озеро Вологодская область.jpg|thumb|right|250px|Vaugedjärv]]
-'''Vaugedjärv''' ([[venäkel'|ven.]]: ''Белое озеро'' (a mugažo sijaližel dialektal — ''Бело озёро''), [[suomen kel'|suom.]]: ''Valketjärvi'') om järv [[Venäma]]n [[Vologdan agj]]as.
+'''Vaugedjärv''' ([[venäkel'|ven.]]: ''Белое озеро'' (a mugažo sijaližel dialektal — ''Бело озёро''), [[suomen kel'|suom.]]: ''Valkeajärvi'') om järv [[Venäma]]n [[Vologdan agj]]as.
 
 Pind om läz 1125 km². Makssüvüz om läz 33 metrad.
 {{stub}}
 
 [[Kategorii:Järved kirjamišton mödhe]]
-
-[[ru:Белое озеро (Вологодская область)]]
