*Empty MediaWiki Message*

--- a/Ville-la-Komb.mw
+++ b/Ville-la-Komb.mw
@@ -13,7 +13,7 @@
  | Telefonkod = +33-03
  | Aigvö = [[UTC]]+1
 }}
-'''Ville la Komb''' ([[francijan kel'|franc.]]: ''Villers-la-Combe'') om [[kommun]] [[Francijas|Avstrijas]], [[Franš Konte]]-regionas.
+'''Ville la Komb''' ([[francijan kel'|franc.]]: ''Villers-la-Combe'') om [[kommun]] [[Francii|Francijas]], [[Franš Konte]]-regionas.
 
 Pind om läz 6 km². Ville la Komban eläjiden lugu oli 49 ristitud 2010-žes vodes. Pämez' — Raimon Bassin'jo.
 {{stub}}
