*Empty MediaWiki Message*

--- a/Centropogon_cazaletii.mw
+++ b/Centropogon_cazaletii.mw
@@ -1,4 +1,4 @@
-'''''Centropogon cazaletii''''' om [[kazmused|kazmuzerik]] ''[[Campanulaceae]]''-sugukundas.
+'''''Centropogon cazaletii''''' om [[kazmused|kazmuzerik]] ''[[Campanulaceae]]''-heimkundas.
 
 [[Ekvador]]an [[endemik]]. Kazvab nepsoiš tropižiš i subtropižiš mecoiš, mägiš. Sugu om [[kadojad erikad|kadomižen grazindan]] al.
 {{stub}}
