на эту тему должна быть особая статья

--- a/Juhannus.mw
+++ b/Juhannus.mw
@@ -1,4 +1,4 @@
-'''Juhannus''' om [[Ivan Kupala|Ivanan Kupalan]] päiv, [[Suomalaižed|suomalaižiden]] kezapühänik [[kezaku]]s. [[Suomenma]]s om valdkundaline praznik da mugažo nacionaližen flagan päiv.
+'''Juhannus''' om [[Ivan Kupala|Ivanan Kupalan]] päiv, [[Suomalaižed|suomalaižiden]] kezapühänik [[kezaku]]s. [[Suomenma]]s om valdkundaline praznik da mugažo [[Flagan päiväd Suomenmas|nacionaližen flagan päiv]].
 
 [[Venäma]]s se om [[Inkeriläižed|inkeriläižiden (ingermanlandijalaižiden)]] nacionaline praznik, kudamban praznuitas [[Tuutari-park]]as läz [[Piter]]id.
 
