*Empty MediaWiki Message*

--- a/Käte-ške_käbedaks_kägoihudeks.mw
+++ b/Käte-ške_käbedaks_kägoihudeks.mw
@@ -7,5 +7,5 @@ Kirjas oma [[83 (lugu)|83]] voikud.
 == Irdkosketused ==
 * [http://finugor.ru/node/23125 Uzištuz kirjan polhe Finugor-portalal]
 
-[[Kategorii:Kirjan kirjamištod mödhe]]
+[[Kategorii:Kirjad kirjamištod mödhe]]
 [[Kategorii:Kirjad vepsän kelel]]
