--- a/Vepsän_rahvahan_sarnad_(2012).mw
+++ b/Vepsän_rahvahan_sarnad_(2012).mw
@@ -2,7 +2,7 @@
 [[Fail:Vepsansadut2012suomi.jpg|right|thumb|Suomenkeližen pästandan kirjankor']]
 [[Fail:Vepsansadut2012unkari.jpg|right|thumb|Mad'jarankeližen pästandan kirjankor']]
 
-'''"Vepsän rahvahan sarnad"''' om [[Žukova Ol'ga|Ol'ga Žukovan]] [[vepsläižed|vepsän]] rahvahan sarnoiden [[vepsän kel'|vepsän kelel]] kirj.
+'''"Vepsän rahvahan sarnad"''' om [[Žukova Ol'ga|Ol'ga Žukovan]] [[vepsläižed|vepsän]] rahvahan sarnoiden kirj [[vepsän kel'|vepsän kelel]].
 
 Se om pästtud [[2012]] vodel [[Juminkeko]]-fondan abunke.
 
