*Empty MediaWiki Message*

--- a/Kalevala.mw
+++ b/Kalevala.mw
@@ -1,4 +1,8 @@
+[[Fail:Vepsakalevala.jpg|right|thumb|Vepsän kelel pästandan kirjankor']]
+
 '''Kalevala''' — karjalaiž-suomalaine rahvahaline epos. [[Lönnrot Elias|Elias Lönnrot]] "kerazi" "Kalevalan" [[Karjalan Tazovaldkund|Karjalas]] da [[Suomi|Suomenmas]].
+
+[[Vepsän kel']]he Kalevalad kändi [[Zaiceva Nina|Nina Zaiceva]].
 
 {{stub}}
 
