*Empty MediaWiki Message*

--- a/Kalevala.mw
+++ b/Kalevala.mw
@@ -2,7 +2,7 @@
 
 '''Kalevala''' — karjalaiž-suomalaine rahvahaline epos. [[Lönnrot Elias|Elias Lönnrot]] "kerazi" "Kalevalan" [[Karjalan Tazovaldkund|Karjalas]] da [[Suomi|Suomenmas]].
 
-[[Vepsän kel']]he Kalevalad kändi [[Zaiceva Nina|Nina Zaiceva]].
+[[Vepsän kel']]he Kalevalan kändi [[Zaiceva Nina|Nina Zaiceva]].
 
 {{stub}}
 
