*Empty MediaWiki Message*

--- a/Ičemoi_lugemišt.mw
+++ b/Ičemoi_lugemišt.mw
@@ -2,7 +2,7 @@
 
 '''"Ičemoi lugemišt"''' om lugendkirj [[vepsän kel'|vepsän kelel]] norembile škol'nikoile. Se om pästtud [[1994]] vodel.
 
-Kirjan avtorad oma [[Zaiceva Nina|Nina Zaiceva]] da [Mullonen Marija|Marija Mullonen]].
+Kirjan avtorad oma [[Zaiceva Nina|Nina Zaiceva]] da [[Mullonen Marija|Marija Mullonen]].
 
 [[Kategorii:Kirjad kirjamišton mödhe]]
 [[Kategorii:Kirjad vepsän kelel]]
