*Empty MediaWiki Message*

--- a/Ičemoi_londuz.mw
+++ b/Ičemoi_londuz.mw
@@ -4,5 +4,8 @@
 
 Om pästtud [[2000]] vodel [[Petroskoi]]š.
 
+== Irdkosketused ==
+* [http://veps-kir.ucoz.ru/publ/vepsan/icemoi_londuz/17 Kirjaspäi erased tekstad kirillical]
+
 [[Kategorii:Kirjad kirjamišton mödhe]]
 [[Kategorii:Kirjad vepsän kelel]]
