--- a/Uz'_Zavet.mw
+++ b/Uz'_Zavet.mw
@@ -29,4 +29,8 @@
 * [[Judan kirjaine]]
 * [[Nägudezkirj]]
 
+== Uz' Zavet vepsän kelel]] ==
+[[Fail:Uz'_Zavet|right|thumb|Pästandan kirjankor']]
+Uden Zavetan vepsän kel'he kändi [[Zaiceva Nina|Nina Zaiceva]]. Kirj om pästtud [[2006]] vodel [[Biblijan kändmižen institut]]an abunke.
+
 [[Kategorii:Uz' Zavet|*]]
