*Empty MediaWiki Message*

--- a/Uz'_Zavet.mw
+++ b/Uz'_Zavet.mw
@@ -30,7 +30,7 @@
 * [[Nägudezkirj]]
 
 == Uz' Zavet vepsän kelel]] ==
-[[Fail:Uz'_Zavet|right|thumb|Pästandan kirjankor']]
+[[Fail:Uz'_Zavet.jpg|right|thumb|Pästandan kirjankor']]
 Uden Zavetan vepsän kel'he kändi [[Zaiceva Nina|Nina Zaiceva]]. Kirj om pästtud [[2006]] vodel [[Biblijan kändmižen institut]]an abunke.
 
 [[Kategorii:Uz' Zavet|*]]
