--- a/Uz'_Zavet.mw
+++ b/Uz'_Zavet.mw
@@ -29,7 +29,7 @@
 * [[Judan kirjaine]]
 * [[Nägudezkirj]]
 
-== Uz' Zavet vepsän kelel]] ==
+== Uz' Zavet vepsän kelel ==
 [[Fail:Uz'_Zavet.jpg|right|thumb|Pästandan kirjankor']]
 Uden Zavetan vepsän kel'he kändi [[Zaiceva Nina|Nina Zaiceva]]. Kirj om pästtud [[2006]] vodel [[Biblijan kändmižen institut]]an abunke.
 
