тут наверное можно и в преамбулу вписать, а не в отдельный заголовок

--- a/Uz'_Zavet.mw
+++ b/Uz'_Zavet.mw
@@ -1,4 +1,7 @@
+[[Fail:Uz' Zavet.jpg|right|thumb|250px|Vepsänkel'žen pästandan kirjankor']]
 '''Uz' Zavet''' ({{kel’+grc|Ἡ Καινὴ Διαθήκη|Hē Kainḕ Diathḗkē}}) om [[Biblii|Biblijan]] toine pala. Udes Zavetas om 27 kirjad.
+
+Uden Zavetan vepsän kel'he kändi [[Zaiceva Nina|Nina Zaiceva]]. Kirj om pästtud [[2006]] vodel [[Biblijan kändmižen institut]]an abunke.
 
 == Uden Zavetan kirjad ==
 * [[Evangelii Matvejan mödhe]]
@@ -28,9 +31,5 @@
 * [[3. Joannan kirjaine]]
 * [[Judan kirjaine]]
 * [[Nägudezkirj]]
-
-== Uz' Zavet vepsän kelel ==
-[[Fail:Uz'_Zavet.jpg|right|thumb|Pästandan kirjankor']]
-Uden Zavetan vepsän kel'he kändi [[Zaiceva Nina|Nina Zaiceva]]. Kirj om pästtud [[2006]] vodel [[Biblijan kändmižen institut]]an abunke.
 
 [[Kategorii:Uz' Zavet|*]]
