*Empty MediaWiki Message*

--- a/Biblii.mw
+++ b/Biblii.mw
@@ -2,6 +2,11 @@
 '''Biblii''' (grek.: βιβλία) om hristanuskojiden päkirj. ''Biblii'' jagase kahthe palaha — [[Vanh Zavet]] i [[Uz' Zavet]]. ''Vanh Zavet'' oli kirjutadud vanhal evrejan kelel, a ''Uz' Zavet'' - vanhal grekan kelel. Nene keled oliba siloi kul’turkeled. Biblii om ezmäine paindud kirj. Gutenbergan Biblii oli paindud vozil 1452-1455.
 
 [[Vul'gat]] om Biblijan latinankeline kändmuz.
+
+== Biblii vepsän kelel ==
+[[Fail:Biblii.jpg|right|thumb|Pästandan kirjankor']]
+[[1996]] vodel oli pästtud lapsiden Biblii vepsän kelel. Kändai om [[Zaiceva Nina|Nina Zaiceva]].
+
 {{stub}}
 
 [[Kategorii:Biblii|!]]
