*Empty MediaWiki Message*

--- a/Biblii.mw
+++ b/Biblii.mw
@@ -4,7 +4,7 @@
 [[Vul'gat]] om Biblijan latinankeline kändmuz.
 
 == Biblii vepsän kelel ==
-[[Fail:Biblii.jpg|right|thumb|Pästandan kirjankor']]
+[[Fail:Biblii.jpg|right|thumb|Lapsiden Biblijan pästandan kirjankor']]
 [[1996]] vodel oli pästtud lapsiden Biblii vepsän kelel. Kändai om [[Zaiceva Nina|Nina Zaiceva]].
 
 {{stub}}
