*Empty MediaWiki Message*

--- a/Psalmoiden_kirj.mw
+++ b/Psalmoiden_kirj.mw
@@ -1,4 +1,9 @@
+[[Fail:Psaltir.jpg|right|thumb|Vepsän kelel pästandan kirjankor']]
+
 '''Psalmoiden kirj''' ([[evrejan kel'|evr.]]: ''תְּהִלִּים'', [[grekan kel'|grek.]]: ''Ψαλμοὶ'', [[latinan kel'|lat.]]: ''Psalmorum'', [[venäkel'|ven.]]: ''Псалтирь'') om [[Vanh Zavet|Vanhan Zavetan]] kirj.
+
+[[2013]] vodel oli pästtud psalmoiden kirj vepsän kelel. Kändai om [[Zaiceva Nina|Nina Zaiceva]].
+
 {{Vanhan Zavetan kirjad}}
 {{stub}}
 
