*Empty MediaWiki Message*

--- a/Vanh_zirkul.mw
+++ b/Vanh_zirkul.mw
@@ -1,4 +1,6 @@
-'''«Vanh zirkul»''' (kirjankelel: ''Vanh zerkol'', [[venäkel'|ven.]]: ''Старое зеркало'') om [[2003]]-žen voden [[Bašnin Mihail|Mihailan Bašninan]] runokogoduz [[vepsän kel'|vepsän kelel]].
+[[Fail:Vanhzirkul.jpg|right|thumb|Pästandan kirjankor']]
+
+'''«Vanh zirkul»''' ([[venäkel'|ven.]]: ''Старое зеркало'') om [[2003]]-den voden [[Bašnin Mihail|Mihailan Bašninan]] runokogoduz [[vepsän kel'|vepsän kelel]].
 {{stub}}
 
 [[Kategorii:Kirjad vepsän kelel]]
