Lapsiden Biblii - Библия детей? Странновато...

--- a/Biblii.mw
+++ b/Biblii.mw
@@ -1,13 +1,13 @@
-[[Fail:Bibel-1.jpg|pisi|125px|Biblii]]
-'''Biblii''' (grek.: βιβλία) om hristanuskojiden päkirj. ''Biblii'' jagase kahthe palaha — [[Vanh Zavet]] i [[Uz' Zavet]]. ''Vanh Zavet'' oli kirjutadud vanhal evrejan kelel, a ''Uz' Zavet'' - vanhal grekan kelel. Nene keled oliba siloi kul’turkeled. Biblii om ezmäine paindud kirj. Gutenbergan Biblii oli paindud vozil 1452-1455.
+[[Fail:Bicentennial Bible.jpg|thumb|right|250px|Tipine Biblijan pästand]]
+'''Biblii''' ([[grekan kel'|grek.]]: βιβλία) om hristanuskojiden päkirj. ''Biblii'' jagase kahthe palaha — [[Vanh Zavet]] i [[Uz' Zavet]]. ''Vanh Zavet'' oli kirjutadud amuevrejan kelel, a ''Uz' Zavet'' - amugrekan kelel. Nene keled oliba siloi kul'turkeled. Biblii om ezmäine paindud kirj. Gutenbergan Biblii oli paindud vozil 1452-1455.
 
-[[Vul'gat]] om Biblijan latinankeline kändmuz.
+[[Vul'gat]] om Biblijan latinankel'ne kändmuz.
 
-== Biblii vepsän kelel ==
-[[Fail:Biblii.jpg|right|thumb|Lapsiden Biblijan pästandan kirjankor']]
+== Lapsenbiblii vepsän kelel ==
+[[Fail:Biblii.jpg|thumb|left|250px|Lapsiden Biblijan pästandan kirjankor']]
 [[1996]] vodel oli pästtud lapsiden Biblii vepsän kelel. Kändai om [[Zaiceva Nina|Nina Zaiceva]].
 
 {{stub}}
 
-[[Kategorii:Biblii|!]]
+[[Kategorii:Biblii|*]]
 [[Kategorii:Kirjad kirjamišton mödhe]]
