--- a/Biblii.mw
+++ b/Biblii.mw
@@ -1,5 +1,5 @@
 [[Fail:Bicentennial Bible.jpg|thumb|right|250px|Tipine Biblijan pästand]]
-'''Biblii''' ([[grekan kel'|grek.]]: βιβλία) om hristanuskojiden päkirj. ''Biblii'' jagase kahthe palaha — [[Vanh Zavet]] i [[Uz' Zavet]]. ''Vanh Zavet'' oli kirjutadud amuevrejan kelel, a ''Uz' Zavet'' - amugrekan kelel. Nene keled oliba siloi kul'turkeled. Biblii om ezmäine paindud kirj. Gutenbergan Biblii oli paindud vozil 1452-1455.
+'''Biblii''' ([[grekan kel'|grek.]]: ''Βιβλία'') om hristanuskojiden päkirj. ''Biblii'' jagase kahthe palaha — [[Vanh Zavet]] i [[Uz' Zavet]]. ''Vanh Zavet'' oli kirjutadud amuevrejan kelel, a ''Uz' Zavet'' - amugrekan kelel. Nene keled oliba siloi kul'turkeled. Biblii om ezmäine paindud kirj. Gutenbergan Biblii oli paindud vozil 1452-1455.
 
 [[Vul'gat]] om Biblijan latinankel'ne kändmuz.
 
