не хочу умничать, но адессив должен быть после основы

--- a/Psalmoiden_kirj.mw
+++ b/Psalmoiden_kirj.mw
@@ -1,10 +1,7 @@
-[[Fail:Psaltir.jpg|right|thumb|Vepsän kelel pästandan kirjankor']]
-
+[[Fail:Psaltir.jpg|right|thumb|Pästandan kirjankor' vepsän kelel]]
 '''Psalmoiden kirj''' ([[evrejan kel'|evr.]]: ''תְּהִלִּים'', [[grekan kel'|grek.]]: ''Ψαλμοὶ'', [[latinan kel'|lat.]]: ''Psalmorum'', [[venäkel'|ven.]]: ''Псалтирь'') om [[Vanh Zavet|Vanhan Zavetan]] kirj.
 
-[[2013]] vodel oli pästtud psalmoiden kirj vepsän kelel. Kändai om [[Zaiceva Nina|Nina Zaiceva]].
+[[2013]] vodel oli pästtud psalmoiden kirj [[vepsän kel'|vepsän kelel]]. Kändai om [[Zaiceva Nina|Nina Zaiceva]].
 
 {{Vanhan Zavetan kirjad}}
 {{stub}}
-
-[[ml:സങ്കീര്‍ത്തനങ്ങള്‍]]
