--- a/Verez_tullei.mw
+++ b/Verez_tullei.mw
@@ -1,4 +1,6 @@
-'''„Verez tullei“''' om [[vepsän kel'|vepsänkel'ne]] al'manah, vspäi 2010.
+[[Fail:Verez_tullei_2011.jpg|right|thumb|2011-nden voden pästandan kirjankor']]
+[[Fail:Verez_tullei.jpg|right|thumb|2012-nden voden pästandan kirjankor']]
+'''„Verez tullei“''' om [[vepsän kel'|vepsänkel'ne]] literaturine al'manah.
 
 == Irdkosketused ==
 * [http://knk.karelia.ru/2012/02/veres-tullei.html «Verez tullei» - альманах для семейного чтения] {{ref-ru}}
