как насчёт такого оформления? :)

--- a/Verez_tullei.mw
+++ b/Verez_tullei.mw
@@ -1,6 +1,9 @@
-[[Fail:Verez_tullei_2011.jpg|right|thumb|2011-nden voden pästandan kirjankor']]
-[[Fail:Verez_tullei.jpg|right|thumb|2012-nden voden pästandan kirjankor']]
 '''„Verez tullei“''' om [[vepsän kel'|vepsänkel'ne]] literaturine al'manah.
+
+<gallery>
+File:Verez_tullei_2011.jpg|2011-nden voden pästandan kirjankor'
+File:Verez_tullei.jpg|2012-nden voden pästandan kirjankor'
+</gallery>
 
 == Irdkosketused ==
 * [http://knk.karelia.ru/2012/02/veres-tullei.html «Verez tullei» - альманах для семейного чтения] {{ref-ru}}
