*Empty MediaWiki Message*

--- a/Verez_tullei.mw
+++ b/Verez_tullei.mw
@@ -1,6 +1,7 @@
 '''„Verez tullei“''' om [[vepsän kel'|vepsänkel'ne]] literaturine al'manah.
 
 <gallery>
+File:Verez_tullei_2006.jpg|2006-nden voden pästandan kirjankor'
 File:Verez_tullei_2011.jpg|2011-nden voden pästandan kirjankor'
 File:Verez_tullei.jpg|2012-nden voden pästandan kirjankor'
 </gallery>
