*Empty MediaWiki Message*

--- a/Vepsän_man_mujud.mw
+++ b/Vepsän_man_mujud.mw
@@ -1,6 +1,6 @@
 [[Fail:Vepsanmanmujud.jpg|right|thumb|150px|Pästandan kirjankor']]
 
-'''"Vepsän man mujud"''' om erazvuiččiden sarnoiden, sanutesiden da toižiden materialoiden kogoduz [[vepsän kel'|vepsän kelel]], kudamb om pästtud [[2012]] vodel [[Petroskoi]]š.
+'''"Vepsän man mujud"''' om erazvuiččiden sarnoiden, sanutesiden da toižiden materialoiden kogoduz [[vepsän kel'|vepsän]] da [[venäkel'|venän]] kelil, kudamb om pästtud [[2012]] vodel [[Petroskoi]]š.
 
 Sen tegijad oma J. Markov da N. Markova.
 
