*Empty MediaWiki Message*

--- a/Kahtišti_koumekümne_koume.mw
+++ b/Kahtišti_koumekümne_koume.mw
@@ -1,6 +1,8 @@
 [[Fail:Kahtisti.jpg|right|thumb|150px|Pästandan kirjankor']]
 
-'''"Kahtišti koumekümne koume"''' om [[Abramov Nikolai|Nikolai Abramov]]an runokogoduz [[vepsän kel'|vepsän]] da [[mad'jaran kel'|kelihe]]. Mad'jaran kel'he kändai om Katalin Nad'.
+'''"Kahtišti koumekümne koume"''' om [[Abramov Nikolai|Nikolai Abramov]]an runokogoduz [[vepsän kel'|vepsän]] da [[mad'jaran kel'|mad'jaran]] kelihe. Mad'jaran kel'he kändai om Katalin Nad'.
+
+Kirj om pästtud [[2010]] vodel [[Mad'jaranma]]s.
 
 [[Kategorii:Kirjad kirjamišton mödhe]]
 [[Kategorii:Kirjad vepsän kelel]]
