--- a/Abramov_Nikolai.mw
+++ b/Abramov_Nikolai.mw
@@ -10,6 +10,12 @@ Abramovan vepsänkeližed da venäkeližed runod om painud 1980 vodelpäi. 1994 
 * ''[[Kurgiden aig]] (Время журавлей)''. Petroskoi: "Periodik", 1999.
 * ''[[Pagiškam, vell']] (Поговорим, брат)''. Petroskoi: "Periodik", 2005.
 
+==== Toižed kirjad ====
+* ''[[Kahtišti koumekümne koume]] (Дважды тридцать три)''. Runokogoduz vepsän da mad'jaran kelil, 2010.
+* ''[[Kurgede aeg]] (Время журавлей)''. Runokogoduz estin kelel, 2010.
+* ''[[Les chants des forêts]] (Песни леса)''. Runokogoduz vepsän da francijan kelil, 2011
+* ''[[Оять-ёген рандал...]] (На берегу реки Оять...)''. Kirilline runokogoduz, 2013
+
 == Irdkosketused ==
 * [http://www.admhmao.ru/people/finougr/html/poezia/vepsi/index.html Biografii Suomalaiž-ugrilaižiden runokirjutajiden Kahesanden kongressan saital] (venäkelel)
 * [http://library.karelia.ru/elbiblio/veps/%DD%EB%E5%EA%F2%F0%EE%ED%ED%FB%E5%20%E8%E7%E4%E0%ED%E8%FF/koume.html Runokirj «Koumekümne koume» Karjalan Rahvahaližen kirjišton saital]
