*Empty MediaWiki Message*

--- a/Psalmoiden_kirj.mw
+++ b/Psalmoiden_kirj.mw
@@ -3,5 +3,7 @@
 
 [[2013]] vodel oli pästtud psalmoiden kirj [[vepsän kel'|vepsän kelel]]. Kändai om [[Zaiceva Nina|Nina Zaiceva]].
 
+{{Commonscat|Psalters}}
+
 {{Vanhan Zavetan kirjad}}
 {{stub}}
