--- a/Оять-ёген_рандал....mw
+++ b/Оять-ёген_рандал....mw
@@ -6,5 +6,8 @@ Kirjaha mülüi enamba [[90 (lugu)|90]] runod da runokändmižid. Kirjankorel om
 
 Nece kirj om ezmäine kirilline pästand vepsän kelel [[1992]] vodelpäi.
 
+== Irdkosketused ==
+[http://veps-kir.ucoz.ru/blog/ojat_jogen_randal/2013-06-17-19 Necen kirjan polhe VVIKP:an blogal]
+
 [[Kategorii:Kirjad kirjamišton mödhe]]
 [[Kategorii:Kirjad vepsän kelel]]
