оба имени склоняются

--- a/Koivuine.mw
+++ b/Koivuine.mw
@@ -1,6 +1,6 @@
 [[Fail:Koivuine.jpg|right|thumb|Pästandan kirjankor']]
 
-'''"Koivuine"''' om surmanjäl'ghine [[vepsläižed|vepsläižen]] runokirjutajan da radioradnikan [[Alevtina Andrejeva]]n runokogoduz [[vepsän kel'|vepsän]] da [[venäkel'|venän]] kelil. Se om pästtud [[2000]] vodes [[Juminkeko]]-fondan abunke.
+'''"Koivuine"''' om surmanjäl'ghine [[vepsläižed|vepsläižen]] runokirjutajan da radioradnikan [[Alevtina Andrejeva|Alevtinan Andrejevan]] runokogoduz [[vepsän kel'|vepsän]] da [[venäkel'|venän]] kelil. Se om pästtud [[2000]] vodes [[Juminkeko]]-fondan abunke.
 
 [[Kategorii:Kirjad kirjamišton mödhe]]
 [[Kategorii:Kirjad vepsän kelel]]
