*Empty MediaWiki Message*

--- a/Lendi_linduine_(kirj).mw
+++ b/Lendi_linduine_(kirj).mw
@@ -1,6 +1,6 @@
 [[Fail:Lendi_linduine.jpg|right|thumb|Pästandan kirjankor']]
 
-'''"Lendi linduine"''' om [[Lebedeva Valentina|Valentina Lebedevan]] literaturkogoduz.
+'''"Lendi linduine"''' om [[Lebedeva Valentina|Valentinan Lebedevan]] literaturkogoduz.
 
 Kirj om pästtud [[2012]] vodel [[Juminkeko]]-fondan abunke.
 
