*Empty MediaWiki Message*

--- a/Vauktan_unen_süles.mw
+++ b/Vauktan_unen_süles.mw
@@ -1,6 +1,6 @@
 [[Fail:Vauktan.jpg|right|thumb|Pästandan kirjankor']]
 
-'''"Vauktan unen süles"''' om [[Zaiceva Nina|Nina Zaiceva]]n runokogoduz. Se om pästtud [[2008]] vodel [[Petroskoi]]š.
+'''"Vauktan unen süles"''' om [[Zaiceva Nina|Ninan Zaicevan]] runokogoduz. Se om pästtud [[2008]] vodel [[Petroskoi]]š.
 
 [[Kategorii:Kirjad kirjamišton mödhe]]
 [[Kategorii:Kirjad vepsän kelel]]
