*Empty MediaWiki Message*

--- a/Vepsläižed_(kirj).mw
+++ b/Vepsläižed_(kirj).mw
@@ -1,6 +1,6 @@
 [[Fail:Vepslaized.jpg|right|thumb|150px|Pästandan kirjankor']]
 
-'''"Vepsläižed"''' om pen' [[Strogalščikova Zinaida|Zinaida Strogal'ščikova]]n kirj [[vepsläižed|vepsläižiden]] polhe. Se om pästtud [[2008]] vodel [[Petroskoi]]š.
+'''"Vepsläižed"''' om pen' [[Strogalščikova Zinaida|Zinaidan Strogal'ščikovan]] kirj [[vepsläižed|vepsläižiden]] polhe. Se om pästtud [[2008]] vodel [[Petroskoi]]š.
 
 Om [[venäkel'|venäkel'ne-ki]] kirjan versii.
 
