*Empty MediaWiki Message*

--- a/Pol'tošt_paginad.mw
+++ b/Pol'tošt_paginad.mw
@@ -1,4 +1,4 @@
-'''"Pol'tošt paginad"''' ([[venäkel'|ven.]]: ''Полтора разговора'') om [[Grigor'jev Nikolai|Nikolai Grigor'jevan]] sanutez.
+'''"Pol'tošt paginad"''' ([[venäkel'|ven.]]: ''Полтора разговора'') om [[Grigor'jev Nikolai|Nikolajan Grigor'jevan]] sanutez.
 
 [[Vepsän kel'|Vepsän kelel]] necidä sanutest pästtihe [[1937]] vodel. Kändai oli M. Loginov. 
 
