*Empty MediaWiki Message*

--- a/Kahtišti_koumekümne_koume.mw
+++ b/Kahtišti_koumekümne_koume.mw
@@ -5,7 +5,7 @@
 Kirj om pästtud [[2010]] vodel [[Mad'jaranma]]s.
 
 == Kacu mugažo ==
-* [[Koumekümne koume (kirj)]]
+* «[[Koumekümne koume (kirj)|Koumekümne koume]]»
 
 [[Kategorii:Kirjad kirjamišton mödhe]]
 [[Kategorii:Kirjad vepsän kelel]]
