--- a/Abramov_Nikolai.mw
+++ b/Abramov_Nikolai.mw
@@ -6,7 +6,7 @@ Abramov om sündnu [[Ladv]]aha, [[Podporožjen rajon|Podporožjen (Kos'kenaluiž
 Abramovan vepsänkeližed da venäkeližed runod om painud 1980 vodelpäi. 1994 vodel ozutihe «Koumekümne koume»-runokeraduz, ezmäine vepsänkeline čomamahtoine kirj. Abramovan runod oma kätud [[Suomen kel'|suomen]], [[Estin kel'|estin]], [[Mad'jaran kel'|mad'jaran]] kelihe da toižihe kelihe.
 
 == Kirjad ==
-* ''[[Koumekümne koume]] (Тридцать три)''. Petroskoi: "Karjal", 1994.
+* ''[[Koumekümne koume (kirj)|Koumekümne koume]] (Тридцать три)''. Petroskoi: "Karjal", 1994.
 * ''[[Kurgiden aig]] (Время журавлей)''. Petroskoi: "Periodik", 1999.
 * ''[[Pagiškam, vell']] (Поговорим, брат)''. Petroskoi: "Periodik", 2005.
 
