*Empty MediaWiki Message*

--- a/Malthodes_anatolicus.mw
+++ b/Malthodes_anatolicus.mw
@@ -1,4 +1,4 @@
-'''''Malthodes anatolicus''''' om [[gaved']]. Kudamban avaiži da ümbrikirjuti vl. [[1967]] entomolog Uittmer.<ref>http://insects.tamu.edu/research/collection/hallan/test/Arthropoda/Insects/Coleoptera/Family/Coleoptera1.htm</ref>
+'''''Malthodes anatolicus''''' om [[gaved']], kudamban avaiži da ümbrikirjuti vl. [[1967]] entomolog Uittmer.<ref>http://insects.tamu.edu/research/collection/hallan/test/Arthropoda/Insects/Coleoptera/Family/Coleoptera1.htm</ref>
 
 == Homaičendad ==
 {{reflist}}
