--- a/1_(lugu).mw
+++ b/1_(lugu).mw
@@ -1,6 +1,5 @@
 [[Fail:Evolution1glyph.svg|pisi|1]]
-'''1''' ('''üks’''') om lugusana [[0 (lugu)|0]] da [[2 (lugu)|2]] keskes.
-
+'''1''' ('''üks'''') om lugusana [[0 (lugu)|0]] da [[2 (lugu)|2]] keskes.
 {{stub}}
 
-[[Kategorii:Lugusanad|1]]
+[[Kategorii:Lugusanad]]
