/* Kaikiš suremb Vikipedijad */ сортировка + плюс если первые 10, то португальская уходит

--- a/Vikipedii.mw
+++ b/Vikipedii.mw
@@ -3,15 +3,15 @@
 
 == Kaikiš suremb Vikipedijad ==
 # [[Anglijan Vikipedii]]
+# [[Alaman Vikipedii]]
 # [[Saksan Vikipedii]]
 # [[Francijan Vikipedii]]
-# [[Alaman Vikipedii]]
 # [[Italijan Vikipedii]]
-# [[Pol'šan Vikipedii]]
 # [[Ispanijan Vikipedii]]
+# [[Ročin Vikipedii]]
 # [[Venäkel'ne Vikipedii]]
+# [[Pol'šan Vikipedii]]
 # [[Japonijan Vikipedii]]
-# [[Portugalijan Vikipedii]]
 
 == Kacu mugažo ==
 * [[Vepsän Vikipedii]]
