--- a/Lonstonan_zamk.mw
+++ b/Lonstonan_zamk.mw
@@ -1,7 +1,7 @@
 [[Fail:Launceston Castle - geograph.org.uk - 22242.jpg|thumb|right|250px|Lonstonan zamkan ruinad]]
 '''Lonstonan zamk''' ([[anglijan kel'|angl.]]: ''Launceston Castle'', [[Kornan kel'|korn.]]: ''Kastell Lannstefan'') om zamk [[Lonston]]an ([[Kornuoll]], [[Anglii]], [[Sur' Britanii]]) ümbrištos.
 
-Om saudud [[1067]]-žen vhesai; nügüdläižen aigan linni ruinoikš. Hal'g rižab turistoilpäi.
+Om saudud [[1067]]-žen vhesai; nügüdläižen aigan linni ruinoikš. Hal'g rižase turistoil.
 {{stub}}
 
 [[Kategorii:Zamkad kirjamišton mödhe]]
