*Empty MediaWiki Message*

--- a/Juhannus.mw
+++ b/Juhannus.mw
@@ -1,5 +1,5 @@
 '''Juhannus''' om [[Ivan Kupala|Ivanan Kupalan]] päiv, [[Suomalaižed|suomalaižiden]] kezapühänik [[kezaku]]s. [[Suomenma]]s om valdkundaline praznik da mugažo [[Flagan päiväd Suomenmas|nacionaližen flagan päiv]].
 
-[[Venäma]]s se om [[Inkeriläižed|inkeriläižiden (ingermanlandijalaižiden)]] nacionaline praznik, kudamban praznuitas [[Tuutari-park]]as läz [[Piter]]id.
+[[Venäma]]s se om [[Inkeriläižed|inkeriläižiden (ingermanlandijalaižiden)]] nacionaline praznik, kudamban praznuidas [[Tuutari-park]]as läz [[Piter]]id.
 
 [[Kategorii:Praznikad kirjamišton mödhe]]
