/* Mel'hetartuižed faktad */ Думаю, такой порядок правильнее

--- a/Virantanaz.mw
+++ b/Virantanaz.mw
@@ -8,7 +8,7 @@ Sen tegii om [[Zaiceva Nina|Nina Zaiceva]].
 Kirj om pästtud [[2012]] vodel [[Juminkeko]]-fondan abul.
 
 == Mel'hetartuižed faktad ==
-* Om necen eposan lapsile pästand. Sen tegii om mugažo Nina Zaiceva. Kuvitai - [[Sotnikova Irina|Irina Sotnikova]].
+* Om necen eposan pästand lapsile. Sen tegii om mugažo Nina Zaiceva. Kuvitai - [[Sotnikova Irina|Irina Sotnikova]].
 
 == Kacu mugažo ==
 * [[Kalevala]]
