--- a/Ozatoi_kalatez.mw
+++ b/Ozatoi_kalatez.mw
@@ -1,6 +1,6 @@
 [[Fail:Ozatoi.jpg|right|thumb|Pästandan kirjankor']]
 
-'''"Ozatoi kalatez"''' om komikskirj [[vepsän kel'|vepsän kelel]]. Se om pästtud [[1992]] vodel.
+'''"Ozatoi kalatez"''' om [[komiks]]kirj [[vepsän kel'|vepsän kelel]]. Se om pästtud [[1992]] vodel.
 
 [[Kategorii:Kirjad kirjamišton mödhe]]
 [[Kategorii:Kirjad vepsän kelel]]
