*Empty MediaWiki Message*

--- a/Eristalis_intricaria.mw
+++ b/Eristalis_intricaria.mw
@@ -1,5 +1,5 @@
 [[Fail:Eristalis (Eoseristalis) intricarius 01.JPG|thumb|right|250px|''Eristalis intricarius'']]
-'''''Eristalis intricarius''''' om [[gaved']] (kärbhaine) ''[[Syrphidae]]''-sugukundas.
+'''''Eristalis intricarius''''' om [[gaved']] ([[kärbhaine]]) ''[[Syrphidae]]''-sugukundas.
 
 Eläb [[Venäma]]s, [[Kazahstan]]as, [[Kirgizii|Kirgizijas]] dai päivlaskmaižes i pohjoižes [[Evrop]]as.
 {{stub}}
